Changes: - text changes - small styling fix, where text could overflow too much when using in mobile

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/matriculation.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/matriculation.scss
@@ -181,8 +181,7 @@
 
   .matriculation__label {
     flex-basis: auto;
-    flex-grow: 0;
-    flex-shrink: 0;
+    flex-shrink: 1;
     margin: 0 10px 0 0;
     padding: 0;
   }
